# Faceless-agent

./: .env.sample  .gitignore  README.md  dev.sh  start-backend.sh
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: chat_service.py  cli.py  database.py  main.py  models.py
backend/tests/: test_api.py  test_database.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: ChatWindow.vue  CustomPersonaInput.vue  ModeToggle.vue  PersonaGenerator.vue
frontend/src/services/: api.ts
frontend/src/stores/: chat.ts  theme.ts
frontend/src/types/: index.ts
